Fix: Configuración completa para Netlify
- Agregado netlify.toml con headers correctos para MIME types
- Configuración de Vite optimizada para producción
- Archivo _redirects para SPA routing
- Build optimizado con estructura de assets mejorada
- Fallback script para compatibilidad de navegadores
- Archivo vite.svg incluido en build final

--- a/index.html
+++ b/index.html
@@ -27,5 +27,11 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <script>
+      // Fallback para navegadores que no soportan modules
+      if (!('noModule' in HTMLScriptElement.prototype)) {
+        console.log('Module scripts not supported');
+      }
+    </script>
   </body>
 </html>
